<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        app:backgroundTint="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="Create an account"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="Email"
        android:paddingLeft="20dp"
        android:fontFamily="@font/regular"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/rpassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2"
        app:layout_constraintVertical_bias="0.058"
        app:layout_constraintWidth_percent=".8"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="Password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:fontFamily="@font/regular"
        android:paddingBottom="10dp"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="320dp" />

    <EditText
        android:id="@+id/rpassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="Confirm Password"
        android:fontFamily="@font/regular"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2"
        app:layout_constraintVertical_bias="0.233"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        android:text="@string/registerbtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:backgroundTint="@color/blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpassword"
        app:layout_constraintVertical_bias="0.515" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpassword2"
        app:layout_constraintVertical_bias="0.705" />

</androidx.constraintlayout.widget.ConstraintLayout>