<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="10dp"
    app:cardElevation="10dp"
    android:layout_marginTop="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select a budget item"
            android:gravity="center"
            android:textColor="#000"
            android:id="@+id/item"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/itemspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:entries="@array/items"
                android:layout_gravity="center"
                android:background="#fff">
            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Amount"
                android:inputType="number"
                android:id="@+id/amount"
                android:textColor="#000"
                android:textColorHint="#000"/>

            <EditText
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Note"
                android:id="@+id/note"
                android:textColor="#000"
                android:textColorHint="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="Cancel"
                    android:backgroundTint="@color/blue"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/blue"
                    android:layout_marginBottom="2dp"
                    android:text="Save"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>
</LinearLayout>


</androidx.cardview.widget.CardView>