<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BudgetActivity"
    android:background="@drawable/login">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:id="@+id/toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <TextView
        android:id="@+id/totalBudgetAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Savings Vault: "
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabSize="normal"
            android:id="@+id/fab"
            android:backgroundTint="@color/black"
            android:layout_margin="16dp"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>